--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -1,42 +1,45 @@
 name: Build and Push Docker Images to ECR
- 
+
 on:
   push:
     branches:
       - main
- 
+
 jobs:
   build:
     runs-on: ubuntu-latest
- 
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
- 
-      - name: Login to AWS ECR
-        run: |
-          aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 782879222248.dkr.ecr.us-east-1.amazonaws.com
+      - name: Login into ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v1
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
+          AWS_REGION: us-east-1
+
+      # - name: Login to AWS ECR
+      #   run: |
+      #     aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 782879222248.dkr.ecr.us-east-1.amazonaws.com
+
       - name: Build MySQL Docker image
         run: |
           docker build -t mysql-image -f Dockerfile_mysql .
           docker tag mysql-image:latest 782879222248.dkr.ecr.us-east-1.amazonaws.com/clo835.assignment1:mysql
- 
+
       - name: Build Web App Docker image
         run: |
           docker build -t webapp-image -f Dockerfile .
           docker tag webapp-image:latest 782879222248.dkr.ecr.us-east-1.amazonaws.com/clo835.assignment1:webapp
- 
+
       - name: Push MySQL Docker image to ECR
         run: |
           docker push 782879222248.dkr.ecr.us-east-1.amazonaws.com/clo835.assignment1:mysql
- 
+
       - name: Push Web App Docker image to ECR
         run: |
           docker push 782879222248.dkr.ecr.us-east-1.amazonaws.com/clo835.assignment1:webapp
