--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-flask==2.0.3
-Jinja2==3.0.3
-Werkzeug==0.16.1
+Flask>=2.0.0
+itsdangerous>=2.0.0
+Jinja2>=3.0.0
 pymysql==1.0.2
 cryptography==38.0.1
