--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-Flask>=2.0.0
-itsdangerous>=2.0.0
-Jinja2>=3.0.0
+flask==2.0.3
 pymysql==1.0.2
 cryptography==38.0.1
+itsdangerous>=2.0.0
+Jinja2>=3.0.0
