--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
-flask==2.0.3
-Werkzeug>=2.0
-pymysql==1.0.2
-cryptography==38.0.1
-itsdangerous>=2.0.0
-Jinja2>=3.0.0
+Flask==2.2.3
+Werkzeug==2.2.2
+pymysql==1.0.3
+cryptography==39.0.1
