--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -29,17 +29,17 @@ jobs:
       - name: Build MySQL Docker image
         run: |
           docker build -t mysql-image -f Dockerfile_mysql .
-          docker tag mysql-image:latest 782879222248.dkr.ecr.us-east-1.amazonaws.com/clo835.assignment1:mysql
+          docker tag mysql-image:latest 782879222248.dkr.ecr.us-east-1.amazonaws.com/assignment2:mysql
 
       - name: Build Web App Docker image
         run: |
           docker build -t webapp-image -f Dockerfile .
-          docker tag webapp-image:latest 782879222248.dkr.ecr.us-east-1.amazonaws.com/clo835.assignment1:webapp
+          docker tag webapp-image:latest 782879222248.dkr.ecr.us-east-1.amazonaws.com/assignment2:webapp-v0.2
 
       - name: Push MySQL Docker image to ECR
         run: |
-          docker push 782879222248.dkr.ecr.us-east-1.amazonaws.com/clo835.assignment1:mysql
+          docker push 782879222248.dkr.ecr.us-east-1.amazonaws.com/assignment2:mysql-v0.1
 
       - name: Push Web App Docker image to ECR
         run: |
-          docker push 782879222248.dkr.ecr.us-east-1.amazonaws.com/clo835.assignment1:webapp
+          docker push 782879222248.dkr.ecr.us-east-1.amazonaws.com/assignment2:webapp-v0.2
