--- a/kubernetes-manifest/mysql-replicaset.yaml
+++ b/kubernetes-manifest/mysql-replicaset.yaml
@@ -1,8 +1,7 @@
 apiVersion: apps/v1
-kind: Deployment
+kind: ReplicaSet
 metadata:
-  name: mysql-deployment
-  namespace: mysql-namespace
+  name: mysql-rs
 spec:
   replicas: 1
   selector:
