--- a/kubernetes-manifest/mysql-service.yaml
+++ b/kubernetes-manifest/mysql-service.yaml
@@ -2,10 +2,13 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mysql-service
+  namespace: mysql-namespace
 spec:
   selector:
-    app: mysql
+    app: mysql  # mysql label
   ports:
-  - protocol: TCP
-    port: 3306
-  clusterIP: None
+    - protocol: TCP
+      port: 3306       # Port that the service will expose
+      targetPort: 3306 # Port on the MySQL Pods
+  type: ClusterIP
+
