--- a/kubernetes-manifest/webapp-pod.yaml
+++ b/kubernetes-manifest/webapp-pod.yaml
@@ -8,10 +8,10 @@ metadata:
 spec:
   containers:
   - name: webapp
-    image: 782879222248.dkr.ecr.us-east-1.amazonaws.com/assignment2:webapp-v0.2
+    image: 782879222248.dkr.ecr.us-east-1.amazonaws.com/assignment2:webapp-v0.1 
     env:
     - name: DBHOST
-      value: mysql-service.mysql-namespace.svc.cluster.local
+      value: "10.244.0.5"
     - name: DBPORT
       value: "3306"
     - name: DBUSER
@@ -24,5 +24,3 @@ spec:
       value: blue
     ports:
     - containerPort: 8080
-  imagePullSecrets:
-    - name: my-ecr-secret
